--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
     --success-color: #4cc9f0;
     --warning-color: #f72585;
     --border-radius: 8px;
-    --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
   }
   
   body {
@@ -18,17 +18,17 @@
     background-attachment: fixed;
     color: var(--dark-color);
     line-height: 1.6;
-    position: relative;
     box-sizing: border-box;
-}
-
-.main-container {
+  }
+  
+  .main-container {
     box-sizing: border-box;
     min-width: 375px;
     max-width: 1200px;
     margin: 0 auto;
     padding: 2rem;
     font-size: 1rem;
+    position: relative;
   }
   
   h1, h2, h3 {
@@ -211,20 +211,6 @@
   .hidden {
     display: none;
   }
-
-  .journal-entry-modal-wrapper, .journal-detail-container-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    min-width: 375px;
-  }
   
   .journal-entry-modal, .journal-detail-container {
     background: white;
@@ -233,6 +219,10 @@
     box-shadow: var(--box-shadow);
     width: 70%;
     margin: 2rem auto;
+    z-index: 10;
+    position: absolute;
+    top: 20%;
+    left: 12%;
   }
   
   .journal-entry-title {
