--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
   }
   
   body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
@@ -166,12 +166,15 @@
     gap: 0.5rem;
     margin-bottom: 0.8rem;
     color: var(--secondary-color);
+    font-weight: 600;
+    font-size: 1.3rem;
   }
   
   .timestamp {
     color: #6c757d;
-    font-size: 0.9rem;
+    font-size: 1.3rem;
     margin-bottom: 1rem;
+    font-weight: 700;
   }
   
   .add-entry-button {
@@ -315,7 +318,12 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    font-weight: 500;
+    font-weight: 700;
+  }
+
+  .journal-detail-mood, .journal-detail-timestamp {
+    font-size: 1.3rem;
+    font-weight: 600;
   }
   
   .journal-detail-title span {
@@ -331,6 +339,7 @@
   .journal-detail-text {
     line-height: 1.8;
     white-space: pre-line;
+    font-size: 1.5rem;
   }
   
   .journal-detail-buttons {
@@ -390,6 +399,11 @@
     
     .journal-top-content {
       grid-template-columns: repeat(3, 1fr);
+    }
+
+    .journal-detail-title{
+    transform: translate(70%);
+    margin: 0 auto;
     }
     
     .journal-content textarea,
